# VibeScent

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  NOTEBOOK_FIX_SUMMARY.md  README.md  add_hf_token.py  check_reranker.py  embed_fragrances.py  eslint.config.mjs  fix_hf_transfer_indent.py  fix_indent.py  fix_indent2.py  fix_nb.py  generate_labels.py  get_cell5.py  learn_weights.py  merge_datasets.py  next.config.ts  notes.txt  notes_to_vibe.py  package-lock.json  package.json  patch_cell1_zip.py  patch_cell5.py  patch_cell5_pbar.py  patch_debug.py  patch_embeddings_tqdm.py  patch_enrich.py  patch_enrich_generate.py  patch_git_reset.py  patch_hardcode_token.py  patch_hf_home.py  patch_hf_transfer.py  patch_nb.py  patch_nb3.py  patch_offline_cell1.py  patch_robust_mount.py  (+23 more)
.claude/: settings.json  settings.local.json
app/: layout.tsx  page.tsx
backend/: api.py  clip_zero_shot.py  perfume_scraper.py  recommender.py  requirements.txt  server.py
configs/: vibes.json
data/: learned_weights.json  ltr_labels.csv  mock_fragrances.csv  occasions.json  vibescent_500.csv  vibescent_test10.csv
docs/: README.md  architecture.md  darren.md  evaluation.md  gpu_proposal.md  harsh.md  kaggle-week2.md  karan.md  neil.md  plan-gavin-original.md  plan-updated.md  presentation.md  project-plan.md  project.md
examples/: benchmark_briefs.json
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
lib/: recommend.ts  types.ts
logs/: cnn_losses.json
models/: clip_standalone.py  cnn_baseline.py  cnn_clip_hybrid.py  kmeans_fragrance_model.pkl
notebooks/: harsh_kaggle_week5.ipynb  harsh_offline_pipeline.ipynb  harsh_week2_pipeline.ipynb  harsh_week3_reranker.ipynb  harsh_week4_demo.ipynb  harsh_week5_qwen3vl.ipynb  requirements.colab.t4.txt  requirements.colab.txt  train_colab.ipynb
results/: week2_report.md
scripts/: compare_retrieval.py  data_loader.py  embed_cpu.py  embed_fragrances.py  enrich_dataset.py  enrich_groq.py  evaluate.py  inference.py  label_clusters.py  merge_datasets.py  multimodal_colab.ipynb  patch_nb_settings.py  serve_demo.py  update_week5_nb.py  vibe_pipeline_check.py  zip_project.sh
src/: clip_zero_shot.py  data_loader.py  evaluate.py  inference.py  utils.py
styles/: globals.css
tests/: test_backend_app.py  test_benchmark.py  test_cli.py  test_embeddings.py  test_engine.py  test_enrich.py  test_fusion.py  test_image_preprocess.py  test_image_scoring.py  test_io_utils.py  test_perfume_scraper.py  test_pipelines.py  (+10 more)
(+80 files in other folders)
