[project]
name = "vibescents-text"
version = "0.1.0"
description = "Text retrieval, multimodal retrieval, and reranking pipeline for VibeScent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai",
  "matplotlib",
  "numpy",
  "pandas",
  "pillow",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
vibescents = "vibescents.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibescents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
